# bigUnsignedInteger

./: .gitignore  CMakeLists.txt  Makefile  README.md  big integer and long ariphmetics.vcxproj  big_uint.cpp  big_uint.h  main.cpp
include/: big_uint.h
src/: big_uint.cpp
